<resources>
<string name="app_name">Geohash Droid Legacy</string>
<string name="app_description">A simple Geohashing app</string>
<string name="graticule_label">Graticule:</string>
<string name="date_label">Date:</string>
<string name="what_label">What\'s Geohashing?</string>
<string name="search_label">Attempting to determine your location...</string>
<string name="search_title">Searching...</string>
<string name="go_label">Go!</string>
<string name="go_disabled_label">Enter a graticule</string>
<string name="ok_label">Okay</string>
<string name="gratmap_go_label">Use this one</string>
<string name="backtomap_label">Back to the map</string>
<string name="closest_label">Use Closest</string>
<string name="globalhash_label">Globalhash!</string>
<string name="gratmap_label">Pick From Map</string>
<string name="always_today_label">Today</string>
<string name="cancel_label">Cancel</string>
<string name="darn_label">Darn!</string>
<string name="dialog_switch_graticule_okay">Yes, change to this one</string>
<string name="dialog_switch_graticule_cancel">No, keep what I have</string>
<string name="dialog_switch_graticule_text">The point for that graticule is %1$s from your current location.  Do you want to switch to it?</string>
<string name="dialog_switch_graticule_unknown">Do you want to switch to this graticule?</string>
<string name="error_title">Error</string>
<string name="standby_title">Stand by...</string>
<string name="location_unknown">Location unknown</string>
<string name="stock_label">Retrieving stock data...</string>
<string name="location_label">Attempting to determine your location...</string>
<string name="error_search_failed">Couldn\'t figure out your graticule.  Make sure GPS and/or wireless network location sensing are enabled in Settings and you are in range of either.</string>
<string name="error_not_yet_posted">There hasn\'t been a stock price posted for that date.</string>
<string name="error_server_failure">There was a problem talking to the stock price server.  Please try again later.</string>
<string name="map_activity_title">The Map</string>
<string name="gratmap_activity_title">Tap your graticule</string>
<string name="detail_activity_title">Details</string>
<string name="destination_label">Today\'s Point</string>
<string name="find_location">Trying to determine your location...</string>
<string name="find_location_again">Readjusting view...</string>
<string name="autozoom_turned_off">Automatic zooming turned off</string>
<string name="autozoom_turned_on">Automatic zooming turned on</string>
<string name="pref_autozoom_title">Auto-zoom</string>
<string name="pref_autozoom_on">Automatically zoom as you move (manual zooming overrides this)</string>
<string name="pref_autozoom_off">Only zoom manually</string>
<string name="pref_remembergraticule_title">Auto-fill last graticule</string>
<string name="pref_remembergraticule_on">When starting the program, fill in the last graticule used</string>
<string name="pref_remembergraticule_off">When starting the program, leave the graticule blank</string>
<string name="pref_infobox_title">Info box</string>
<string name="pref_infobox_dialogtitle">Select infobox size</string>
<string name="pref_infobox_off">No infobox at all</string>
<string name="pref_infobox_small">Small-sized infobox</string>
<string name="pref_infobox_jumbo">Jumbo-sized infobox</string>
<string name="pref_units_title">Distance units</string>
<string name="pref_units_dialogtitle">Select units</string>
<string name="pref_units_metric">Metric (km)</string>
<string name="pref_units_imperial">Imperial (miles)</string>
<string name="pref_coordunits_title">Coordinate units</string>
<string name="pref_coordunits_dialogtitle">Select units</string>
<string name="pref_coordunits_degrees">Degrees (38.040°N)</string>
<string name="pref_coordunits_minutes">Minutes (38° 2.40′N)</string>
<string name="pref_coordunits_seconds">Seconds (38° 2′ 23.7″N)</string>
<string name="pref_nearbypoints_title">Show nearby points</string>
<string name="pref_nearbypoints_on">Put markers on the meetup points in nearby graticules</string>
<string name="pref_nearbypoints_off">Don\'t draw nearby markers</string>
<string name="pref_stockcachesize_title">Stock cache size</string>
<string name="pref_stockcachesize_off">Don\'t use a stock cache database</string>
<string name="pref_stockcachesize_10">Ten entries</string>
<string name="pref_stockcachesize_15">Fifteen entries</string>
<string name="pref_stockcachesize_25">Twenty-five entries</string>
<string name="pref_stockcachesize_50">Fifty entries</string>
<string name="pref_stockcachesize_100">One hundred entries</string>
<string name="pref_wikiusername_title">Wiki username</string>
<string name="pref_wikiusername_dialogtitle">Enter your username</string>
<string name="pref_wikiusername_hint">Username</string>
<string name="pref_wikipassword_title">Wiki password</string>
<string name="pref_wikipassword_summary">Password used to log into the geohashing wiki</string>
<string name="pref_wikipassword_dialogtitle">Enter your password</string>
<string name="pref_wikipassword_hint">Password</string>
<string name="pref_wikiphonetime_title">Post with phone\'s time</string>
<string name="pref_wikiphonetime_on">Use the time on the phone instead of the wiki\'s time for wiki posts</string>
<string name="pref_wikiphonetime_off">Use the standard wiki time signature for wiki posts</string>
<string name="pref_usestockservice_title">Prefetch stocks</string>
<string name="pref_usestockservice_on">Try to prefetch each day\'s stock value</string>
<string name="pref_usestockservice_off">Only fetch stock values on-demand</string>
<string name="pref_stockwipe_title">Clear stock cache</string>
<string name="pref_stockwipe_dialog_text">Are you sure you want to clear all stock cache data?</string>
<string name="pref_cat_map">Map options</string>
<string name="pref_cat_other">Other options</string>
<string name="pref_cat_wiki">Wiki options</string>
<string name="dialog_stockwipe_yes">Yes, clear it</string>
<string name="dialog_stockwipe_no">No, cancel</string>
<string name="toast_stockwipe_success">The stock cache database has been cleared.</string>
<string name="toast_stockwipe_failure">There was a problem clearing the stock cache database.</string>
<string name="dialog_send_to_maps_title">Send to Maps?</string>
<string name="dialog_send_to_maps_text">Do you want to view this point on the Maps app?  Note that it may plot it at the closest point of interest, so you may need to come back here if you want to get more exact.</string>
<string name="dialog_send_to_maps_yes">Yes, go to Maps</string>
<string name="dialog_send_to_maps_no">No, stay here</string>
<string name="send_to_maps_point_name">Geohash for %1$s</string>
<string name="toast_close_enough">You\'re there!  This is as close to the point as GPS accuracy gets.  Yay!</string>
<string name="menu_item_recenter_normalview">Fit both on screen</string>
<string name="menu_item_settings">Settings</string>
<string name="menu_item_recenter">Recenter</string>
<string name="menu_item_recenter_destination">The final destination</string>
<string name="menu_item_recenter_mylocation">Your current location</string>
<string name="menu_item_details">Details</string>
<string name="menu_item_mode_street">Normal map</string>
<string name="menu_item_mode_sat">Satellite</string>
<string name="menu_item_about">About</string>
<string name="menu_item_post">Wiki</string>
<string name="menu_item_post_message">Post message</string>
<string name="menu_item_post_picture">Upload picture</string>
<string name="menu_item_post_wiki">View graticule page</string>
<string name="menu_item_send_to_maps">Send to Maps</string>
<string name="menu_item_globalhash">Globalhash</string>
<string name="menu_item_geohash">Geohash</string>
<string name="menu_item_radar">Radar</string>
<string name="wiki_editor_activity_title">Enter Message</string>
<string name="wiki_picture_activity_title">Upload Picture</string>
<string name="wiki_editor_not_logged_in">WARNING: You will be posting anonymously.  If you do not wish to be anonymous, you need to set a username and password in settings.</string>
<string name="wiki_post_message_summary">[live]</string>
<string name="wiki_post_picture_summary">[live picture]</string>
<string name="wiki_post_message_summary_retro">[retro]</string>
<string name="wiki_post_picture_summary_retro">[retro picture]</string>
<string name="wiki_conn_failure">failed.</string>
<string name="wiki_conn_success">okay.</string>
<string name="wiki_conn_finished_title">Success!</string>
<string name="wiki_conn_finished">Successfully posted!</string>
<string name="wiki_conn_done">Done!</string>
<string name="wiki_conn_login">Attempting login...</string>
<string name="wiki_conn_connection_failed">Connection failed.</string>
<string name="wiki_conn_login_parse_fail">Failed to parse login reply.</string>
<string name="wiki_conn_login_no_reply">No reply to login request.</string>
<string name="wiki_conn_anon_warning">WARNING: Posting anonymously.</string>
<string name="wiki_conn_anon_pic_error">You can\'t upload pictures anonymously.  You must specify a username and password in Preferences first.</string>
<string name="wiki_conn_pic_load_error">Error loading that picture.</string>
<string name="wiki_conn_current_location">Current location:</string>
<string name="wiki_conn_current_location_unknown">Current location unknown.</string>
<string name="wiki_conn_picture_location_unknown">Picture location unknown, using current location...</string>
<string name="wiki_conn_expedition_retrieving">Retrieving expedition</string>
<string name="wiki_conn_expedition_reretrieving">Re-retrieving expedition...</string>
<string name="wiki_conn_expedition_nonexistant">doesn\'t exist.</string>
<string name="wiki_conn_expedition_creating">Creating expedition page...</string>
<string name="wiki_conn_insert_message">Inserting message...</string>
<string name="wiki_conn_upload_image">Uploading image...</string>
<string name="wiki_conn_shrink_image">Compressing and scaling image...</string>
<string name="wiki_conn_updating_gallery">Updating gallery...</string>
<string name="wiki_conn_check_picture_exists">Checking to see if this picture already exists...</string>
<string name="wiki_conn_check_picture_exists_yes">it does, skipping re-upload...</string>
<string name="wiki_conn_check_picture_exists_no">it doesn\'t.</string>
<string name="wiki_error_xml">Invalid XML sent from wiki.</string>
<string name="wiki_error_unknown">An unknown error happened with the wiki.  Please try again.</string>
<string name="wiki_error_illegal_namespace">Pages in that namespace can\'t be edited.</string>
<string name="wiki_error_protected">You\'re not allowed to edit that page.</string>
<string name="wiki_error_email_confirm">Your email address isn\'t confirmed, and the wiki won\'t let you edit because of that.</string>
<string name="wiki_error_permission_denied">Permission denied.</string>
<string name="wiki_error_blocked">You\'ve been blocked from editing the wiki.</string>
<string name="wiki_error_rate_limit">You\'re posting way too fast.  Slow down a bit and try again in a few minutes.</string>
<string name="wiki_error_read_only">The wiki is in read-only mode right now.  Try again later.</string>
<string name="wiki_error_bad_username">That username is invalid.</string>
<string name="wiki_error_bad_password">Your password is incorrect.</string>
<string name="wiki_error_throttled">You\'ve tried to log in too many times.  Please wait around five minutes and try again.</string>
<string name="wiki_error_invalid_page">The wiki couldn\'t find that page because the page\'s name is invalid.</string>
<string name="wiki_error_no_create">You\'re not allowed to create pages.</string>
<string name="infobox_accuracy_low">(Accuracy low)</string>
<string name="infobox_accuracy_really_low">(Accuracy really low)</string>
<string name="hint_lat">Lat</string>
<string name="hint_lon">Lon</string>
</resources>