<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_cat_map" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="AutoZoom"
            android:persistent="true"
            android:summaryOff="@string/pref_autozoom_off"
            android:summaryOn="@string/pref_autozoom_on"
            android:title="@string/pref_autozoom_title" />

        <ListPreference
            android:defaultValue="Small"
            android:dialogTitle="@string/pref_infobox_dialogtitle"
            android:entries="@array/pref_infobox_entries"
            android:entryValues="@array/pref_infobox_values"
            android:key="InfoBoxSize"
            android:persistent="true"
            android:title="@string/pref_infobox_title" />
        <ListPreference
            android:defaultValue="Metric"
            android:dialogTitle="@string/pref_units_dialogtitle"
            android:entries="@array/pref_units_entries"
            android:entryValues="@array/pref_units_values"
            android:key="Units"
            android:persistent="true"
            android:title="@string/pref_units_title" />
        <ListPreference
            android:defaultValue="Degrees"
            android:dialogTitle="@string/pref_coordunits_dialogtitle"
            android:entries="@array/pref_coordunits_entries"
            android:entryValues="@array/pref_coordunits_values"
            android:key="CoordUnits"
            android:persistent="true"
            android:title="@string/pref_coordunits_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="NearbyPoints"
            android:persistent="true"
            android:summaryOff="@string/pref_nearbypoints_off"
            android:summaryOn="@string/pref_nearbypoints_on"
            android:title="@string/pref_nearbypoints_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_wiki" >
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/pref_wikiusername_dialogtitle"
            android:key="WikiUserName"
            android:persistent="true"
            android:title="@string/pref_wikiusername_title" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/pref_wikipassword_dialogtitle"
            android:key="WikiPassword"
            android:persistent="true"
            android:summary="@string/pref_wikipassword_summary"
            android:title="@string/pref_wikipassword_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="WikiUsePhoneTime"
            android:persistent="true"
            android:summaryOff="@string/pref_wikiphonetime_off"
            android:summaryOn="@string/pref_wikiphonetime_on"
            android:title="@string/pref_wikiphonetime_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_other" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="RememberGraticule"
            android:persistent="true"
            android:summaryOff="@string/pref_remembergraticule_off"
            android:summaryOn="@string/pref_remembergraticule_on"
            android:title="@string/pref_remembergraticule_title" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UseStockService"
            android:persistent="true"
            android:summaryOff="@string/pref_usestockservice_off"
            android:summaryOn="@string/pref_usestockservice_on"
            android:title="@string/pref_usestockservice_title" />

        <ListPreference
            android:defaultValue="15"
            android:entries="@array/pref_stockcachesize_entries"
            android:entryValues="@array/pref_stockcachesize_values"
            android:key="StockCacheSize"
            android:persistent="true"
            android:title="@string/pref_stockcachesize_title" >
        </ListPreference>

        <Preference
            android:key="_stockWipe"
            android:title="@string/pref_stockwipe_title" />
    </PreferenceCategory>

</PreferenceScreen>