<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:background="@drawable/geohashing_logo_background"
              tools:context=".activities.LoginPromptDialog">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_wikiusername_title"
            android:id="@+id/title_username"
            android:layout_margin="@dimen/standard_padding"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_username"
            android:ems="10"
            android:hint="@string/pref_wikiusername_hint"
            android:layout_margin="@dimen/standard_padding"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_wikipassword_title"
            android:id="@+id/title_password"
            android:layout_margin="@dimen/standard_padding"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_password"
            android:hint="@string/pref_wikipassword_hint"
            android:layout_margin="@dimen/standard_padding"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="@dimen/standard_padding"
            android:layout_marginRight="@dimen/standard_padding"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_label"
            android:id="@+id/okay"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="@dimen/standard_padding"
            android:layout_marginRight="@dimen/standard_padding"/>
    </LinearLayout>

</LinearLayout>